2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl: Put virtually all options inside
	CYGBLD_BUILD_REDBOOT. And indent accordingly.

2003-02-04  Mark Salter  <msalter@redhat.com>
2003-02-04  Brian Murphy <brian@murphy.dk>

	* src/main.c (return_to_redboot): Add CYGARC_HAL_RESTORE_GP.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* src/main.c: Add support to allow programs started by go to
	return to RedBoot.

	* src/syscall.c (__do_syscall): Return to monitor on program exit
	if gdb not active.
	(sys_timer_isr): Return CYG_ISR_HANDLED.

2003-01-10  Patrick Doyle  <wpd@delcomsys.com>

	* src/load.c (do_load): Don't abort and complain about overwriting
	the end of RAM when loading raw data files and we already asked
	the user if it was ok to write outside what we believe to be RAM.

2002-12-31  Patrick Doyle  <wpd@delcomsys.com>

	* src/decompress.c (gzip_close): Don't complain that decompression
	didn't complete when the stream reaches its end.

2002-12-18  David Mazur  <david@mind.be>
2002-12-18  Mark Salter  <msalter@redhat.com>

	* src/fs/e2fs.c (e2fs_get_gdesc): Fixed handling of group descriptor
	cache misses.

2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/main.c: Export version string via virtual vector table.

2002-11-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/io.c (_rb_gets_preloaded): Null terminate when buffer full.

2002-10-24  Gary Thomas  <gthomas@ecoscentric.com> (inspired by)
2002-10-24  Jay Foster <jay@systech.com>	

	* include/net/bootp.h (BP_MIN_VEND_SIZE): 
	* src/net/bootp.c (__bootp_find_local_ip): Require a minimum vendor
	area to always be sent (to keep some servers happy).

	* src/flash.c: Fix typo for "FIS DELETE"

2002-09-16  Mark Salter  <msalter@redhat.com>

	* src/main.c (set_console_baud_rate): Handle CYGPKG_REDBOOT_ANY_CONSOLE.
	(set_comm_baud_rate): New function.

2002-09-13  Mark Salter  <msalter@redhat.com>

	* src/decompress.c: Move error handling back into gzip_close to